Практически готовый проект (без слайдера с примерми работ)

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 80",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "start": "next start -p 80",
+    "lint": "eslint",
+    "start:80": "set PORT=80 && next start"
   },
   "dependencies": {
     "react": "19.1.0",
@@ -19,3 +20,4 @@
     "@eslint/eslintrc": "^3"
   }
 }
+
